[gd_scene load_steps=11 format=3 uid="uid://bh3lcoj5wp4k"]

[ext_resource type="Script" path="res://src/cutscenes/scripts/Intro.gd" id="1_402um"]
[ext_resource type="PackedScene" uid="uid://dsjcarw31u767" path="res://src/platforming/tile_maps/tile_map_grass.tscn" id="2_iobn0"]
[ext_resource type="PackedScene" uid="uid://5fkn323in6dh" path="res://TextBoxes/text_box.tscn" id="3_jjv4g"]
[ext_resource type="PackedScene" uid="uid://sx7bt0y7mep0" path="res://src/cutscenes/scenes/characters/character.tscn" id="4_plpx4"]
[ext_resource type="PackedScene" uid="uid://c3jjyh6k7o4xs" path="res://src/cutscenes/scenes/characters/companion.tscn" id="5_h1kmo"]

[sub_resource type="Animation" id="Animation_ssk3k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-58, 298)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(463, -22)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(577, 324)]
}

[sub_resource type="Animation" id="Animation_hhqyt"]
resource_name = "intro_walk_companion_1"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(470, -22), Vector2(470, 270)]
}

[sub_resource type="Animation" id="Animation_soa4f"]
resource_name = "intro_walk_player_0"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-58, 298), Vector2(500, 298)]
}

[sub_resource type="Animation" id="Animation_gmvks"]
resource_name = "intro_walk_player_3"
length = 3.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(500, 298), Vector2(1200, 298)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(470, 270), Vector2(1200, 270)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("Camera2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(577, 324), Vector2(1200, 324)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kx1k5"]
_data = {
"RESET": SubResource("Animation_ssk3k"),
"intro_walk_companion_1": SubResource("Animation_hhqyt"),
"intro_walk_player_0": SubResource("Animation_soa4f"),
"intro_walk_player_3": SubResource("Animation_gmvks")
}

[node name="Intro" type="Node2D"]
script = ExtResource("1_402um")

[node name="TileMap2" parent="." instance=ExtResource("2_iobn0")]
layer_0/tile_data = PackedInt32Array(1245218, 65536, 0, 1245219, 65536, 0, 1245220, 65536, 0, 1245221, 65536, 0, 1245222, 65536, 0, 1245223, 65536, 0, 1245224, 65536, 0, 1245225, 65536, 0, 1245226, 65536, 0, 1245227, 65536, 0, 1245217, 65536, 0, 1245216, 65536, 0, 1245215, 65536, 0, 1245214, 65536, 0, 1245213, 65536, 0, 1245212, 65536, 0, 1245211, 65536, 0, 1245210, 65536, 0, 1245209, 65536, 0, 1245208, 65536, 0, 1245207, 65536, 0, 1245200, 65536, 0, 1245199, 65536, 0, 1245198, 65536, 0, 1245197, 65536, 0, 1245196, 65536, 0, 1245195, 65536, 0, 1245194, 65536, 0, 1245193, 65536, 0, 1245192, 65536, 0, 1245191, 65536, 0, 1245190, 65536, 0, 1245189, 65536, 0, 1245188, 65536, 0, 1245187, 65536, 0, 1245186, 65536, 0, 1245185, 65536, 0, 1441835, 65536, 1, 1441834, 65536, 1, 1441833, 65536, 1, 1441832, 65536, 1, 1441831, 65536, 1, 1441830, 65536, 1, 1441829, 65536, 1, 1441828, 65536, 1, 1441827, 65536, 1, 1441826, 65536, 1, 1441825, 65536, 1, 1441824, 65536, 1, 1441823, 65536, 1, 1441822, 65536, 1, 1441821, 65536, 1, 1441820, 65536, 1, 1376283, 65536, 1, 1376282, 65536, 1, 1376281, 65536, 1, 1376280, 65536, 1, 1376279, 65536, 1, 1376278, 65536, 1, 1376277, 65536, 1, 1376276, 65536, 1, 1376275, 65536, 1, 1376274, 65536, 1, 1376273, 65536, 1, 1376272, 65536, 1, 1376271, 65536, 1, 1376270, 65536, 1, 1376269, 65536, 1, 1376268, 65536, 1, 1376267, 65536, 1, 1376266, 65536, 1, 1376265, 65536, 1, 1376264, 65536, 1, 1376263, 65536, 1, 1376262, 65536, 1, 1376261, 65536, 1, 1376260, 65536, 1, 1376259, 65536, 1, 1310721, 65536, 1, 1376257, 65536, 1, 1441793, 65536, 1, 1507329, 65536, 1, 1310722, 65536, 1, 1376258, 65536, 1, 1441794, 65536, 1, 1507330, 65536, 1, 1310723, 65536, 1, 1441795, 65536, 1, 1507331, 65536, 1, 1310724, 65536, 1, 1441796, 65536, 1, 1507332, 65536, 1, 1310725, 65536, 1, 1441797, 65536, 1, 1507333, 65536, 1, 1310726, 65536, 1, 1441798, 65536, 1, 1507334, 65536, 1, 1310727, 65536, 1, 1441799, 65536, 1, 1507335, 65536, 1, 1310728, 65536, 1, 1441800, 65536, 1, 1507336, 65536, 1, 1310729, 65536, 1, 1441801, 65536, 1, 1507337, 65536, 1, 1310730, 65536, 1, 1441802, 65536, 1, 1507338, 65536, 1, 1310731, 65536, 1, 1441803, 65536, 1, 1507339, 65536, 1, 1310732, 65536, 1, 1441804, 65536, 1, 1507340, 65536, 1, 1310733, 65536, 1, 1441805, 65536, 1, 1507341, 65536, 1, 1310734, 65536, 1, 1441806, 65536, 1, 1507342, 65536, 1, 1310735, 65536, 1, 1441807, 65536, 1, 1507343, 65536, 1, 1310736, 65536, 1, 1441808, 65536, 1, 1507344, 65536, 1, 1441809, 65536, 1, 1507345, 65536, 1, 1441810, 65536, 1, 1507346, 65536, 1, 1441811, 65536, 1, 1507347, 65536, 1, 1441812, 65536, 1, 1507348, 65536, 1, 1441813, 65536, 1, 1507349, 65536, 1, 1441814, 65536, 1, 1507350, 65536, 1, 1310743, 65536, 1, 1441815, 65536, 1, 1507351, 65536, 1, 1310744, 65536, 1, 1441816, 65536, 1, 1507352, 65536, 1, 1310745, 65536, 1, 1441817, 65536, 1, 1507353, 65536, 1, 1310746, 65536, 1, 1441818, 65536, 1, 1507354, 65536, 1, 1310747, 65536, 1, 1441819, 65536, 1, 1507355, 65536, 1, 1310748, 65536, 1, 1376284, 65536, 1, 1507356, 65536, 1, 1310749, 65536, 1, 1376285, 65536, 1, 1507357, 65536, 1, 1310750, 65536, 1, 1376286, 65536, 1, 1507358, 65536, 1, 1310751, 65536, 1, 1376287, 65536, 1, 1507359, 65536, 1, 1310752, 65536, 1, 1376288, 65536, 1, 1507360, 65536, 1, 1310753, 65536, 1, 1376289, 65536, 1, 1507361, 65536, 1, 1310754, 65536, 1, 1376290, 65536, 1, 1507362, 65536, 1, 1310755, 65536, 1, 1376291, 65536, 1, 1507363, 65536, 1, 1310756, 65536, 1, 1376292, 65536, 1, 1507364, 65536, 1, 1310757, 65536, 1, 1376293, 65536, 1, 1507365, 65536, 1, 1310758, 65536, 1, 1376294, 65536, 1, 1507366, 65536, 1, 1310759, 65536, 1, 1376295, 65536, 1, 1507367, 65536, 1, 1310760, 65536, 1, 1376296, 65536, 1, 1507368, 65536, 1, 1310761, 65536, 1, 1376297, 65536, 1, 1507369, 65536, 1, 1310762, 65536, 1, 1376298, 65536, 1, 1507370, 65536, 1, 1310763, 65536, 1, 1376299, 65536, 1, 1507371, 65536, 1, 1572878, 65536, 1, 1638414, 65536, 1, 1703950, 65536, 1, 1769486, 65536, 1, 1835022, 65536, 1, 1900558, 65536, 1, 1966094, 65536, 1, 2031630, 65536, 1, 2097166, 65536, 1, 2162702, 65536, 1, 1572879, 65536, 1, 1638415, 65536, 1, 1703951, 65536, 1, 1769487, 65536, 1, 1835023, 65536, 1, 1900559, 65536, 1, 1966095, 65536, 1, 2031631, 65536, 1, 2097167, 65536, 1, 2162703, 65536, 1, 1572880, 65536, 1, 1638416, 65536, 1, 1703952, 65536, 1, 1769488, 65536, 1, 1835024, 65536, 1, 1900560, 65536, 1, 1966096, 65536, 1, 2031632, 65536, 1, 2097168, 65536, 1, 2162704, 65536, 1, 1572881, 65536, 1, 1638417, 65536, 1, 1703953, 65536, 1, 1769489, 65536, 1, 1835025, 65536, 1, 1900561, 65536, 1, 1966097, 65536, 1, 2031633, 65536, 1, 2097169, 65536, 1, 2162705, 65536, 1, 1572882, 65536, 1, 1638418, 65536, 1, 1703954, 65536, 1, 1769490, 65536, 1, 1835026, 65536, 1, 1900562, 65536, 1, 1966098, 65536, 1, 2031634, 65536, 1, 2097170, 65536, 1, 2162706, 65536, 1, 1572883, 65536, 1, 1638419, 65536, 1, 1703955, 65536, 1, 1769491, 65536, 1, 1835027, 65536, 1, 1900563, 65536, 1, 1966099, 65536, 1, 2031635, 65536, 1, 2097171, 65536, 1, 2162707, 65536, 1, 1572884, 65536, 1, 1638420, 65536, 1, 1703956, 65536, 1, 1769492, 65536, 1, 1835028, 65536, 1, 1900564, 65536, 1, 1966100, 65536, 1, 2031636, 65536, 1, 2097172, 65536, 1, 2162708, 65536, 1, 1572885, 65536, 1, 1638421, 65536, 1, 1703957, 65536, 1, 1769493, 65536, 1, 1835029, 65536, 1, 1900565, 65536, 1, 1966101, 65536, 1, 2031637, 65536, 1, 2097173, 65536, 1, 2162709, 65536, 1, 1572886, 65536, 1, 1638422, 65536, 1, 1703958, 65536, 1, 1769494, 65536, 1, 1835030, 65536, 1, 1900566, 65536, 1, 1966102, 65536, 1, 2031638, 65536, 1, 2097174, 65536, 1, 2162710, 65536, 1, 1572887, 65536, 1, 1638423, 65536, 1, 1703959, 65536, 1, 1769495, 65536, 1, 1835031, 65536, 1, 1900567, 65536, 1, 1966103, 65536, 1, 2031639, 65536, 1, 2097175, 65536, 1, 2162711, 65536, 1, 1572888, 65536, 1, 1638424, 65536, 1, 1703960, 65536, 1, 1769496, 65536, 1, 1835032, 65536, 1, 1900568, 65536, 1, 1966104, 65536, 1, 2031640, 65536, 1, 2097176, 65536, 1, 2162712, 65536, 1, 1572889, 65536, 1, 1638425, 65536, 1, 1703961, 65536, 1, 1769497, 65536, 1, 1835033, 65536, 1, 1900569, 65536, 1, 1966105, 65536, 1, 2031641, 65536, 1, 2097177, 65536, 1, 2162713, 65536, 1, 1572890, 65536, 1, 1638426, 65536, 1, 1703962, 65536, 1, 1769498, 65536, 1, 1835034, 65536, 1, 1900570, 65536, 1, 1966106, 65536, 1, 2031642, 65536, 1, 2097178, 65536, 1, 2162714, 65536, 1, 1572891, 65536, 1, 1638427, 65536, 1, 1703963, 65536, 1, 1769499, 65536, 1, 1835035, 65536, 1, 1900571, 65536, 1, 1966107, 65536, 1, 2031643, 65536, 1, 2097179, 65536, 1, 2162715, 65536, 1, 1572892, 65536, 1, 1638428, 65536, 1, 1703964, 65536, 1, 1769500, 65536, 1, 1835036, 65536, 1, 1900572, 65536, 1, 1966108, 65536, 1, 2031644, 65536, 1, 2097180, 65536, 1, 2162716, 65536, 1, 1572893, 65536, 1, 1638429, 65536, 1, 1703965, 65536, 1, 1769501, 65536, 1, 1835037, 65536, 1, 1900573, 65536, 1, 1966109, 65536, 1, 2031645, 65536, 1, 2097181, 65536, 1, 2162717, 65536, 1, 1572894, 65536, 1, 1638430, 65536, 1, 1703966, 65536, 1, 1769502, 65536, 1, 1835038, 65536, 1, 1900574, 65536, 1, 1966110, 65536, 1, 2031646, 65536, 1, 2097182, 65536, 1, 2162718, 65536, 1, 1572895, 65536, 1, 1638431, 65536, 1, 1703967, 65536, 1, 1769503, 65536, 1, 1835039, 65536, 1, 1900575, 65536, 1, 1966111, 65536, 1, 2031647, 65536, 1, 2097183, 65536, 1, 2162719, 65536, 1, 1572896, 65536, 1, 1638432, 65536, 1, 1703968, 65536, 1, 1769504, 65536, 1, 1835040, 65536, 1, 1900576, 65536, 1, 1966112, 65536, 1, 2031648, 65536, 1, 2097184, 65536, 1, 2162720, 65536, 1, 1572897, 65536, 1, 1638433, 65536, 1, 1703969, 65536, 1, 1769505, 65536, 1, 1835041, 65536, 1, 1900577, 65536, 1, 1966113, 65536, 1, 2031649, 65536, 1, 2097185, 65536, 1, 2162721, 65536, 1, 1572898, 65536, 1, 1638434, 65536, 1, 1703970, 65536, 1, 1769506, 65536, 1, 1835042, 65536, 1, 1900578, 65536, 1, 1966114, 65536, 1, 2031650, 65536, 1, 2097186, 65536, 1, 2162722, 65536, 1, 1572899, 65536, 1, 1638435, 65536, 1, 1703971, 65536, 1, 1769507, 65536, 1, 1835043, 65536, 1, 1900579, 65536, 1, 1966115, 65536, 1, 2031651, 65536, 1, 2097187, 65536, 1, 2162723, 65536, 1, 1572900, 65536, 1, 1638436, 65536, 1, 1703972, 65536, 1, 1769508, 65536, 1, 1835044, 65536, 1, 1900580, 65536, 1, 1966116, 65536, 1, 2031652, 65536, 1, 2097188, 65536, 1, 2162724, 65536, 1, 1572901, 65536, 1, 1638437, 65536, 1, 1703973, 65536, 1, 1769509, 65536, 1, 1835045, 65536, 1, 1900581, 65536, 1, 1966117, 65536, 1, 2031653, 65536, 1, 2097189, 65536, 1, 2162725, 65536, 1, 1572902, 65536, 1, 1638438, 65536, 1, 1703974, 65536, 1, 1769510, 65536, 1, 1835046, 65536, 1, 1900582, 65536, 1, 1966118, 65536, 1, 2031654, 65536, 1, 2097190, 65536, 1, 2162726, 65536, 1, 1572903, 65536, 1, 1638439, 65536, 1, 1703975, 65536, 1, 1769511, 65536, 1, 1835047, 65536, 1, 1900583, 65536, 1, 1966119, 65536, 1, 2031655, 65536, 1, 2097191, 65536, 1, 2162727, 65536, 1, 1572904, 65536, 1, 1638440, 65536, 1, 1703976, 65536, 1, 1769512, 65536, 1, 1835048, 65536, 1, 1900584, 65536, 1, 1966120, 65536, 1, 2031656, 65536, 1, 2097192, 65536, 1, 2162728, 65536, 1, 1572905, 65536, 1, 1638441, 65536, 1, 1703977, 65536, 1, 1769513, 65536, 1, 1835049, 65536, 1, 1900585, 65536, 1, 1966121, 65536, 1, 2031657, 65536, 1, 2097193, 65536, 1, 2162729, 65536, 1, 1572906, 65536, 1, 1638442, 65536, 1, 1703978, 65536, 1, 1769514, 65536, 1, 1835050, 65536, 1, 1900586, 65536, 1, 1966122, 65536, 1, 2031658, 65536, 1, 2097194, 65536, 1, 2162730, 65536, 1, 1572907, 65536, 1, 1638443, 65536, 1, 1703979, 65536, 1, 1769515, 65536, 1, 1835051, 65536, 1, 1900587, 65536, 1, 1966123, 65536, 1, 2031659, 65536, 1, 2097195, 65536, 1, 2162731, 65536, 1, 1572865, 65536, 1, 1638401, 65536, 1, 1703937, 65536, 1, 1835009, 65536, 1, 1900545, 65536, 1, 1966081, 65536, 1, 2031617, 65536, 1, 2097153, 65536, 1, 2162689, 65536, 1, 1572866, 65536, 1, 1638402, 65536, 1, 1703938, 65536, 1, 1769474, 65536, 1, 1835010, 65536, 1, 1900546, 65536, 1, 1966082, 65536, 1, 2031618, 65536, 1, 2097154, 65536, 1, 2162690, 65536, 1, 1572867, 65536, 1, 1638403, 65536, 1, 1703939, 65536, 1, 1769475, 65536, 1, 1835011, 65536, 1, 1900547, 65536, 1, 1966083, 65536, 1, 2031619, 65536, 1, 2097155, 65536, 1, 2162691, 65536, 1, 1572868, 65536, 1, 1638404, 65536, 1, 1703940, 65536, 1, 1769476, 65536, 1, 1835012, 65536, 1, 1900548, 65536, 1, 1966084, 65536, 1, 2031620, 65536, 1, 2097156, 65536, 1, 2162692, 65536, 1, 1572869, 65536, 1, 1638405, 65536, 1, 1703941, 65536, 1, 1769477, 65536, 1, 1835013, 65536, 1, 1900549, 65536, 1, 1966085, 65536, 1, 2031621, 65536, 1, 2097157, 65536, 1, 2162693, 65536, 1, 1572870, 65536, 1, 1638406, 65536, 1, 1703942, 65536, 1, 1769478, 65536, 1, 1835014, 65536, 1, 1900550, 65536, 1, 1966086, 65536, 1, 2031622, 65536, 1, 2097158, 65536, 1, 2162694, 65536, 1, 1572871, 65536, 1, 1638407, 65536, 1, 1703943, 65536, 1, 1769479, 65536, 1, 1835015, 65536, 1, 1900551, 65536, 1, 1966087, 65536, 1, 2031623, 65536, 1, 2097159, 65536, 1, 2162695, 65536, 1, 1572872, 65536, 1, 1638408, 65536, 1, 1703944, 65536, 1, 1769480, 65536, 1, 1835016, 65536, 1, 1900552, 65536, 1, 1966088, 65536, 1, 2031624, 65536, 1, 2097160, 65536, 1, 2162696, 65536, 1, 1572873, 65536, 1, 1638409, 65536, 1, 1703945, 65536, 1, 1769481, 65536, 1, 1835017, 65536, 1, 1900553, 65536, 1, 1966089, 65536, 1, 2031625, 65536, 1, 2097161, 65536, 1, 2162697, 65536, 1, 1572874, 65536, 1, 1638410, 65536, 1, 1703946, 65536, 1, 1769482, 65536, 1, 1835018, 65536, 1, 1900554, 65536, 1, 1966090, 65536, 1, 2031626, 65536, 1, 2097162, 65536, 1, 2162698, 65536, 1, 1572875, 65536, 1, 1638411, 65536, 1, 1703947, 65536, 1, 1769483, 65536, 1, 1835019, 65536, 1, 1900555, 65536, 1, 1966091, 65536, 1, 2031627, 65536, 1, 2097163, 65536, 1, 2162699, 65536, 1, 1572876, 65536, 1, 1638412, 65536, 1, 1703948, 65536, 1, 1769484, 65536, 1, 1835020, 65536, 1, 1900556, 65536, 1, 1966092, 65536, 1, 2031628, 65536, 1, 2097164, 65536, 1, 2162700, 65536, 1, 1572877, 65536, 1, 1638413, 65536, 1, 1703949, 65536, 1, 1769485, 65536, 1, 1835021, 65536, 1, 1900557, 65536, 1, 1966093, 65536, 1, 2031629, 65536, 1, 2097165, 65536, 1, 2162701, 65536, 1, 1245184, 65536, 0, 1310719, 65536, 0, 1310718, 65536, 0, 1310717, 65536, 0, 1310716, 65536, 0, 1310715, 65536, 0, 1441786, 0, 1, 1507322, 0, 1, 1572858, 0, 1, 1638394, 0, 1, 1703930, 0, 1, 1769466, 0, 1, 1835002, 0, 1, 1900538, 0, 1, 1966074, 0, 1, 2031610, 0, 1, 2097146, 0, 1, 2162682, 0, 1, 2228218, 0, 1, 1507323, 65536, 1, 1572859, 65536, 1, 1638395, 65536, 1, 1703931, 65536, 1, 1769467, 65536, 1, 1835003, 65536, 1, 1900539, 65536, 1, 1966075, 65536, 1, 2031611, 65536, 1, 2097147, 65536, 1, 2162683, 65536, 1, 2228219, 65536, 1, 1376252, 65536, 1, 1572860, 65536, 1, 1638396, 65536, 1, 1703932, 65536, 1, 1769468, 65536, 1, 1835004, 65536, 1, 1900540, 65536, 1, 1966076, 65536, 1, 2031612, 65536, 1, 2097148, 65536, 1, 2162684, 65536, 1, 2228220, 65536, 1, 1376253, 65536, 1, 1441789, 65536, 1, 1572861, 65536, 1, 1638397, 65536, 1, 1703933, 65536, 1, 1769469, 65536, 1, 1835005, 65536, 1, 1900541, 65536, 1, 1966077, 65536, 1, 2031613, 65536, 1, 2097149, 65536, 1, 2162685, 65536, 1, 2228221, 65536, 1, 1376254, 65536, 1, 1441790, 65536, 1, 1507326, 65536, 1, 1703934, 65536, 1, 1769470, 65536, 1, 1835006, 65536, 1, 1900542, 65536, 1, 1966078, 65536, 1, 2031614, 65536, 1, 2097150, 65536, 1, 2162686, 65536, 1, 2228222, 65536, 1, 1376255, 65536, 1, 1441791, 65536, 1, 1507327, 65536, 1, 1572863, 65536, 1, 1769471, 65536, 1, 1835007, 65536, 1, 1900543, 65536, 1, 1966079, 65536, 1, 2031615, 65536, 1, 2097151, 65536, 1, 2162687, 65536, 1, 2228223, 65536, 1, 1310720, 65536, 1, 1376256, 65536, 1, 1441792, 65536, 1, 1507328, 65536, 1, 1572864, 65536, 1, 1638400, 65536, 1, 1835008, 65536, 1, 1900544, 65536, 1, 1966080, 65536, 1, 2031616, 65536, 1, 2097152, 65536, 1, 2162688, 65536, 1, 1245201, 65536, 0, 1245202, 65536, 0, 1245203, 65536, 0, 1245204, 65536, 0, 1245205, 65536, 0, 1245206, 65536, 0, 1310737, 65536, 1, 1310738, 65536, 1, 1310739, 65536, 1, 1310742, 65536, 1, 1310741, 65536, 1, 1310740, 65536, 1, 1376251, 65536, 1, 1441787, 65536, 1, 1441788, 65536, 1, 1507325, 65536, 1, 1572862, 65536, 1, 1638398, 65536, 1, 1638399, 65536, 1, 1769473, 65536, 1, 1769472, 65536, 1, 1703936, 65536, 1, 1703935, 65536, 1, 1507324, 65536, 1, 1376250, 0, 1, 1310714, 0, 0, 1245228, 65536, 0, 1245229, 65536, 0, 1245230, 65536, 0, 1245231, 65536, 0, 1245232, 65536, 0, 1245233, 65536, 0, 1245234, 65536, 0, 1245235, 65536, 0, 1245236, 65536, 0, 1245237, 65536, 0, 1245238, 65536, 0, 1245239, 65536, 0, 1245240, 65536, 0, 1245241, 65536, 0, 1245242, 65536, 0, 1245243, 65536, 0, 1245244, 65536, 0, 1245245, 65536, 0, 1245246, 65536, 0, 1245247, 65536, 0, 1245248, 65536, 0, 1245249, 65536, 0, 1245250, 65536, 0, 1245251, 65536, 0, 1245252, 65536, 0, 1245253, 65536, 0, 1245254, 65536, 0, 1245255, 131072, 0, 1376300, 65536, 1, 1441836, 65536, 1, 1507372, 65536, 1, 1572908, 65536, 1, 1638444, 65536, 1, 1703980, 65536, 1, 1769516, 65536, 1, 1835052, 65536, 1, 1900588, 65536, 1, 1966124, 65536, 1, 2031660, 65536, 1, 2097196, 65536, 1, 2162732, 65536, 1, 1376301, 65536, 1, 1441837, 65536, 1, 1507373, 65536, 1, 1572909, 65536, 1, 1638445, 65536, 1, 1703981, 65536, 1, 1769517, 65536, 1, 1835053, 65536, 1, 1900589, 65536, 1, 1966125, 65536, 1, 2031661, 65536, 1, 2097197, 65536, 1, 2162733, 65536, 1, 1376302, 65536, 1, 1441838, 65536, 1, 1507374, 65536, 1, 1572910, 65536, 1, 1638446, 65536, 1, 1703982, 65536, 1, 1769518, 65536, 1, 1835054, 65536, 1, 1900590, 65536, 1, 1966126, 65536, 1, 2031662, 65536, 1, 2097198, 65536, 1, 2162734, 65536, 1, 1376303, 65536, 1, 1441839, 65536, 1, 1507375, 65536, 1, 1572911, 65536, 1, 1638447, 65536, 1, 1703983, 65536, 1, 1769519, 65536, 1, 1835055, 65536, 1, 1900591, 65536, 1, 1966127, 65536, 1, 2031663, 65536, 1, 2097199, 65536, 1, 2162735, 65536, 1, 1376304, 65536, 1, 1441840, 65536, 1, 1507376, 65536, 1, 1572912, 65536, 1, 1638448, 65536, 1, 1703984, 65536, 1, 1769520, 65536, 1, 1835056, 65536, 1, 1900592, 65536, 1, 1966128, 65536, 1, 2031664, 65536, 1, 2097200, 65536, 1, 2162736, 65536, 1, 1376305, 65536, 1, 1441841, 65536, 1, 1507377, 65536, 1, 1572913, 65536, 1, 1638449, 65536, 1, 1703985, 65536, 1, 1769521, 65536, 1, 1835057, 65536, 1, 1900593, 65536, 1, 1966129, 65536, 1, 2031665, 65536, 1, 2097201, 65536, 1, 2162737, 65536, 1, 1376306, 65536, 1, 1441842, 65536, 1, 1507378, 65536, 1, 1572914, 65536, 1, 1638450, 65536, 1, 1703986, 65536, 1, 1769522, 65536, 1, 1835058, 65536, 1, 1900594, 65536, 1, 1966130, 65536, 1, 2031666, 65536, 1, 2097202, 65536, 1, 2162738, 65536, 1, 1376307, 65536, 1, 1441843, 65536, 1, 1507379, 65536, 1, 1572915, 65536, 1, 1638451, 65536, 1, 1703987, 65536, 1, 1769523, 65536, 1, 1835059, 65536, 1, 1900595, 65536, 1, 1966131, 65536, 1, 2031667, 65536, 1, 2097203, 65536, 1, 2162739, 65536, 1, 1376308, 65536, 1, 1441844, 65536, 1, 1507380, 65536, 1, 1572916, 65536, 1, 1638452, 65536, 1, 1703988, 65536, 1, 1769524, 65536, 1, 1835060, 65536, 1, 1900596, 65536, 1, 1966132, 65536, 1, 2031668, 65536, 1, 2097204, 65536, 1, 2162740, 65536, 1, 1376309, 65536, 1, 1441845, 65536, 1, 1507381, 65536, 1, 1572917, 65536, 1, 1638453, 65536, 1, 1703989, 65536, 1, 1769525, 65536, 1, 1835061, 65536, 1, 1900597, 65536, 1, 1966133, 65536, 1, 2031669, 65536, 1, 2097205, 65536, 1, 2162741, 65536, 1, 1376310, 65536, 1, 1441846, 65536, 1, 1507382, 65536, 1, 1572918, 65536, 1, 1638454, 65536, 1, 1703990, 65536, 1, 1769526, 65536, 1, 1835062, 65536, 1, 1900598, 65536, 1, 1966134, 65536, 1, 2031670, 65536, 1, 2097206, 65536, 1, 2162742, 65536, 1, 1376311, 65536, 1, 1441847, 65536, 1, 1507383, 65536, 1, 1572919, 65536, 1, 1638455, 65536, 1, 1703991, 65536, 1, 1769527, 65536, 1, 1835063, 65536, 1, 1900599, 65536, 1, 1966135, 65536, 1, 2031671, 65536, 1, 2097207, 65536, 1, 2162743, 65536, 1, 1376312, 65536, 1, 1441848, 65536, 1, 1507384, 65536, 1, 1572920, 65536, 1, 1638456, 65536, 1, 1703992, 65536, 1, 1769528, 65536, 1, 1835064, 65536, 1, 1900600, 65536, 1, 1966136, 65536, 1, 2031672, 65536, 1, 2097208, 65536, 1, 2162744, 65536, 1, 1376313, 65536, 1, 1441849, 65536, 1, 1507385, 65536, 1, 1572921, 65536, 1, 1638457, 65536, 1, 1703993, 65536, 1, 1769529, 65536, 1, 1835065, 65536, 1, 1900601, 65536, 1, 1966137, 65536, 1, 2031673, 65536, 1, 2097209, 65536, 1, 2162745, 65536, 1, 1376314, 65536, 1, 1441850, 65536, 1, 1507386, 65536, 1, 1572922, 65536, 1, 1638458, 65536, 1, 1703994, 65536, 1, 1769530, 65536, 1, 1835066, 65536, 1, 1900602, 65536, 1, 1966138, 65536, 1, 2031674, 65536, 1, 2097210, 65536, 1, 2162746, 65536, 1, 1376315, 65536, 1, 1441851, 65536, 1, 1507387, 65536, 1, 1572923, 65536, 1, 1638459, 65536, 1, 1703995, 65536, 1, 1769531, 65536, 1, 1835067, 65536, 1, 1900603, 65536, 1, 1966139, 65536, 1, 2031675, 65536, 1, 2097211, 65536, 1, 2162747, 65536, 1, 1376316, 65536, 1, 1441852, 65536, 1, 1507388, 65536, 1, 1572924, 65536, 1, 1638460, 65536, 1, 1703996, 65536, 1, 1769532, 65536, 1, 1835068, 65536, 1, 1900604, 65536, 1, 1966140, 65536, 1, 2031676, 65536, 1, 2097212, 65536, 1, 2162748, 65536, 1, 1376317, 65536, 1, 1441853, 65536, 1, 1507389, 65536, 1, 1572925, 65536, 1, 1638461, 65536, 1, 1703997, 65536, 1, 1769533, 65536, 1, 1835069, 65536, 1, 1900605, 65536, 1, 1966141, 65536, 1, 2031677, 65536, 1, 2097213, 65536, 1, 2162749, 65536, 1, 1376318, 65536, 1, 1441854, 65536, 1, 1507390, 65536, 1, 1572926, 65536, 1, 1638462, 65536, 1, 1703998, 65536, 1, 1769534, 65536, 1, 1835070, 65536, 1, 1900606, 65536, 1, 1966142, 65536, 1, 2031678, 65536, 1, 2097214, 65536, 1, 2162750, 65536, 1, 1376319, 65536, 1, 1441855, 65536, 1, 1507391, 65536, 1, 1572927, 65536, 1, 1638463, 65536, 1, 1703999, 65536, 1, 1769535, 65536, 1, 1835071, 65536, 1, 1900607, 65536, 1, 1966143, 65536, 1, 2031679, 65536, 1, 2097215, 65536, 1, 2162751, 65536, 1, 1376320, 65536, 1, 1441856, 65536, 1, 1507392, 65536, 1, 1572928, 65536, 1, 1638464, 65536, 1, 1704000, 65536, 1, 1769536, 65536, 1, 1835072, 65536, 1, 1900608, 65536, 1, 1966144, 65536, 1, 2031680, 65536, 1, 2097216, 65536, 1, 2162752, 65536, 1, 1376321, 65536, 1, 1441857, 65536, 1, 1507393, 65536, 1, 1572929, 65536, 1, 1638465, 65536, 1, 1704001, 65536, 1, 1769537, 65536, 1, 1835073, 65536, 1, 1900609, 65536, 1, 1966145, 65536, 1, 2031681, 65536, 1, 2097217, 65536, 1, 2162753, 65536, 1, 1376322, 65536, 1, 1441858, 65536, 1, 1507394, 65536, 1, 1572930, 65536, 1, 1638466, 65536, 1, 1704002, 65536, 1, 1769538, 65536, 1, 1835074, 65536, 1, 1900610, 65536, 1, 1966146, 65536, 1, 2031682, 65536, 1, 2097218, 65536, 1, 2162754, 65536, 1, 1376323, 65536, 1, 1441859, 65536, 1, 1507395, 65536, 1, 1572931, 65536, 1, 1638467, 65536, 1, 1704003, 65536, 1, 1769539, 65536, 1, 1835075, 65536, 1, 1900611, 65536, 1, 1966147, 65536, 1, 2031683, 65536, 1, 2097219, 65536, 1, 2162755, 65536, 1, 1376324, 65536, 1, 1441860, 65536, 1, 1507396, 65536, 1, 1572932, 65536, 1, 1638468, 65536, 1, 1704004, 65536, 1, 1769540, 65536, 1, 1835076, 65536, 1, 1900612, 65536, 1, 1966148, 65536, 1, 2031684, 65536, 1, 2097220, 65536, 1, 2162756, 65536, 1, 1376325, 65536, 1, 1441861, 65536, 1, 1507397, 65536, 1, 1572933, 65536, 1, 1638469, 65536, 1, 1704005, 65536, 1, 1769541, 65536, 1, 1835077, 65536, 1, 1900613, 65536, 1, 1966149, 65536, 1, 2031685, 65536, 1, 2097221, 65536, 1, 2162757, 65536, 1, 1376326, 65536, 1, 1441862, 65536, 1, 1507398, 65536, 1, 1572934, 65536, 1, 1638470, 65536, 1, 1704006, 65536, 1, 1769542, 65536, 1, 1835078, 65536, 1, 1900614, 65536, 1, 1966150, 65536, 1, 2031686, 65536, 1, 2097222, 65536, 1, 2162758, 65536, 1, 1376327, 131072, 1, 1441863, 131072, 1, 1507399, 131072, 1, 1572935, 131072, 1, 1638471, 131072, 1, 1704007, 131072, 1, 1769543, 131072, 1, 1835079, 131072, 1, 1900615, 131072, 1, 1966151, 131072, 1, 2031687, 131072, 1, 2097223, 131072, 1, 2162759, 131072, 1, 1310764, 65536, 1, 1310765, 65536, 1, 1310766, 65536, 1, 1310767, 65536, 1, 1310768, 65536, 1, 1310769, 65536, 1, 1310770, 65536, 1, 1310771, 65536, 1, 1310772, 65536, 1, 1310773, 65536, 1, 1310774, 65536, 1, 1310775, 65536, 1, 1310776, 65536, 1, 1310777, 65536, 1, 1310778, 65536, 1, 1310779, 65536, 1, 1310780, 65536, 1, 1310781, 65536, 1, 1310782, 65536, 1, 1310783, 65536, 1, 1310784, 65536, 1, 1310785, 65536, 1, 1310786, 65536, 1, 1310787, 65536, 1, 1310788, 65536, 1, 1310789, 65536, 1, 1310790, 65536, 1, 1310791, 131072, 1)

[node name="TextBox" parent="." instance=ExtResource("3_jjv4g")]

[node name="TimerForTextBox" type="Timer" parent="."]
wait_time = 5.0

[node name="CharacterBody2D" parent="." instance=ExtResource("4_plpx4")]
position = Vector2(-58, 298)
metadata/_edit_group_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kx1k5")
}

[node name="CharacterBody2D2" parent="." instance=ExtResource("5_h1kmo")]
position = Vector2(463, -22)
metadata/_edit_group_ = true

[node name="Sprite2D" parent="CharacterBody2D2" index="1"]
flip_h = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(577, 324)

[connection signal="animation_is_finished" from="." to="." method="_on_animation_is_finished"]
[connection signal="display_textbox" from="." to="TextBox" method="_on_display_textbox"]
[connection signal="scene_finished" from="." to="." method="_on_scene_finished"]
[connection signal="text_box_closed" from="TextBox" to="." method="_on_text_box_closed"]
[connection signal="timeout" from="TimerForTextBox" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]

[editable path="CharacterBody2D"]
[editable path="CharacterBody2D2"]
